--- a/my-playlist/src/pages/HomeScreen.module.css
+++ b/my-playlist/src/pages/HomeScreen.module.css
@@ -72,6 +72,12 @@
   max-width: 760px;
   margin: 0 auto;
   width: 100%;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.chatContent::-webkit-scrollbar {
+  display: none;
 }
 
 .chatInput {
